[gd_scene load_steps=6 format=2]

[ext_resource path="res://Splash.tscn" type="PackedScene" id=1]
[ext_resource path="res://Rider.gd" type="Script" id=2]
[ext_resource path="res://shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://rafters.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Rider" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
vframes = 11
hframes = 2

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
bus = "SFX"

[node name="DieTimer" type="Timer" parent="."]
one_shot = true

[node name="Splash" parent="." instance=ExtResource( 1 )]
